--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ reqwest = { version = "0.11", default-features = false, features = [
   "stream",
   "trust-dns",
 ] }
+thiserror = "2.0"
 
 plateau-cli = { path = "./cli" }
 plateau-client = { path = "./client" }
