--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,7 +11,6 @@ authors.workspace = true
 backoff = { version = "0.4", features = ["tokio"], optional = true }
 tokio = { version = "1", features = ["full"], optional = true }
 url = "2"
-thiserror = "1"
 serde = "1"
 serde_json = "1"
 serde_qs = "0.12"
@@ -27,6 +26,7 @@ polars = { version = "0.36.2", optional = true, features = [
 hashbrown = { version = "0.14.5", features = ["raw"] }
 
 reqwest.workspace = true
+thiserror.workspace = true
 
 plateau-transport.workspace = true
 
