--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,14 +10,7 @@ authors.workspace = true
 [dependencies]
 backoff = { version = "0.4", features = ["tokio"], optional = true }
 tokio = { version = "1", features = ["full"], optional = true }
-reqwest = { version = "0.11", default-features = false, features = [
-  "json",
-  "rustls-tls",
-  "stream",
-  "trust-dns",
-] }
 url = "2"
-thiserror = "1"
 serde = "1"
 serde_json = "1"
 serde_qs = "0.12"
@@ -29,6 +22,11 @@ polars = { version = "0.36.2", optional = true, features = [
   "ipc",
   "dtype-full",
 ] }
+
+hashbrown = { version = "0.14.5", features = ["raw"] }
+
+reqwest.workspace = true
+thiserror.workspace = true
 
 plateau-transport.workspace = true
 
