--- a/arrow-rs/transport/Cargo.toml
+++ b/arrow-rs/transport/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "plateau-transport"
+name = "plateau-transport-arrow-rs"
 
 version.workspace = true
 edition.workspace = true
@@ -13,20 +13,19 @@ serde = "1"
 serde_with = "3.7"
 rweb = { version = "0.15", features = ["openapi"], optional = true }
 clap = { version = "4.5", features = ["derive"], optional = true }
-arrow2 = { git = "https://github.com/WallarooLabs/arrow2", branch = "fmurphy/match-polars", features = [
-  "compute_aggregate",
-  "compute_cast",
-  "compute_comparison",
-  "compute_concatenate",
-  "compute_filter",
-  "compute_sort",
-  "compute_take",
-  "io_parquet",
-  "io_ipc",
-  "io_ipc_read_async",
-  "io_json",
-  "io_flight",
+arrow = { version = "55.2.0", features = [
+  "ipc",
+  "csv",
+  "json",
 ] }
+arrow-array = "55.2.0"
+arrow-schema = "55.2.0"
+arrow-select = "55.2.0"
+arrow-data = "55.2.0"
+arrow-buffer = "55.2.0"
+arrow-cast = "55.2.0"
+arrow-json = "55.2.0"
+arrow-ipc = "55.2.0"
 strum = { version = "0.26", features = ["derive"] }
 thiserror = "1"
 regex = "1.10"
