--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ license = "MIT OR Apache-2.0"
 
 
 [workspace.dependencies]
+
+chrono = "0.4"
 reqwest = { version = "0.11", default-features = false, features = [
   "json",
   "rustls-tls",
