--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,7 +13,6 @@ anyhow = "1"
 axum = { version = "0.6", features = ["headers"] }
 bytes = "1.6"
 bytesize = { version = "1.1.0", features = ["serde"] }
-chrono = "0.4"
 config = "0.14"
 futures = "0.3"
 metrics = "0.24"
@@ -39,6 +38,7 @@ systemstat = "0.2"
 utoipa = { version = "4", features = ["axum_extras"] }
 utoipa-swagger-ui = { version = "4", features = ["axum"] }
 
+chrono.workspace = true
 thiserror.workspace = true
 
 plateau-data.workspace = true
@@ -47,7 +47,6 @@ plateau-transport.workspace = true
 
 
 [dev-dependencies]
-itertools = "0.13"
 tempfile = "3"
 test-log = { version = "0.2", default-features = false, features = ["trace"] }
 uuid = { version = "1.10", features = ["v4"] }
