--- a/test/Cargo.toml
+++ b/test/Cargo.toml
@@ -11,7 +11,10 @@ anyhow = "1.0"
 tempfile = "3"
 tokio = "1.38"
 
+chrono.workspace = true
+
 plateau-client.workspace = true
+plateau-data.workspace = true
 plateau-server.workspace = true
 plateau-transport.workspace = true
 
